Inline progress bar in URL entry positioned incorrectly with the Elementary theme & shows artifacts
The new inline progress bar integrated with the URL entry is really neat, but somehow when using the Elementary GTK+ theme it is placed incorrectly and some rendering artifacts show around it. At this point I have not yet investigated whether this is an issue in the Elementary theme itself or whether Epiphany is doing something that prevents the progress bar to be placed correctly.
Screenshot:
Software versions
- Epiphany version: built from
master
, commit de49edb0, reported as 3.29.4 - WebKitGTK+ version: built from
trunk
(r233927), reported as 2.21.4 - Operating system and version: Arch Linux (no version / rolling-release)
- Elementary theme version: 5.1.1