Replace custom url progress bar with built in version of GtkEntry

In order to fix theming issues replace custom progress bar with the internal version of GtkEntry.

Fixes: https://gitlab.gnome.org/GNOME/epiphany/issues/78